# probeannotator

pkg/: NAMESPACE
pkg/ProbeAnnotator/: DESCRIPTION  NAMESPACE  cleanup  configure  configure.ac
pkg/ProbeAnnotator/R/: ProbeAnnotator.R  annotateByAlignment.R  annotateByLocation.R  annotateGetInfoFromOrganismDb.R  annotateGetRefFromTranscriptDb.R  bowtie.get.makeAlignmentCommand.R  bowtie.get.makeIndexCommand.R  bowtie.makeAlignment.R  bowtie.makeIndex.R  checkVector.R  probeAnnot.R  probeAnnot.R.in  searchGene.R  transform_TAB.R  transform_UCSC.R  transform_UCSC.R.in  tryNormalizePath.R
pkg/ProbeAnnotator/man/: ProbeAnnotator-package.Rd  annotateBy.Rd  annotateByLocation.Rd  annotateGetInfoFromOrganismtDb.Rd  annotateGetRefFromTranscriptDb.Rd  bowtie.get.makeAlignmentCommand.Rd  bowtie.get.makeIndexCommand.Rd  bowtie.makeAlignment.Rd  bowtie.makeIndex.Rd  probeAnnot.Rd  searchGene.Rd  transform_TAB.Rd  transform_UCSC.Rd  tryNormalizePath.Rd
pkg/ProbeAnnotator/src/: Makevars.in  Makevars.win  annotatorByLoc.cpp  annotatorClass.h  byAlignment.cpp  byAlignment.h  byLocation.cpp  byLocation.h  exports.cpp  get_score.c  inlines.h  probes_get.h  scores_compute.h  scores_get.h  scores_print.h  structs.h  transform_TAB.c  transform_UCSC.c  utarray.h  uthash.h
pkg/ProbeAnnotator/vignettes/: AnnotationByLocation.Rmd
pkg/R/: bowtie.get.makeAlignmentCommand.R  bowtie.get.makeIndexCommand.R  bowtie.makeAlignment.R  bowtie.makeIndex.R  probeAnnot.R  transform_TAB.R  transform_UCSC.R
pkg/man/: bowtie.get.makeAlignmentCommand.Rd  bowtie.makeIndex.Rd  (+2 more)
www/: index.php
(+7 files in other folders)
